# VitraeShowcase

./: .gitmodules  CMakeLists.txt
Showcase/: CMakeLists.txt
Showcase/forms/: Settings.ui
Showcase/src/: ProfilerWindow.cpp  SettingsWindow.cpp  Status.cpp  Status.hpp  assetCollection.cpp  main.cpp
VitraeEngine/: CMakeLists.txt
VitraeEngine/include/Vitrae/: ComponentRoot.hpp
VitraeEngine/include/Vitrae/Assets/: FrameStore.hpp  Material.hpp  Mesh.hpp  SharedBuffer.hpp  Texture.hpp
VitraeEngine/include/Vitrae/Debugging/: PipelineExport.hpp
VitraeEngine/include/Vitrae/Pipelines/: Method.hpp  Pipeline.hpp  Task.hpp
VitraeEngine/include/Vitrae/Pipelines/Compositing/: Compute.hpp  Constant.hpp  DataRender.hpp  FrameToTexture.hpp  Function.hpp  SceneRender.hpp  Task.hpp
VitraeEngine/include/Vitrae/Pipelines/Shading/: Constant.hpp  Header.hpp  Task.hpp
VitraeEngine/include/Vitrae/Renderers/: OpenGL.hpp
VitraeEngine/include/Vitrae/Renderers/OpenGL/: Mesh.hpp  ShaderCompilation.hpp  SharedBuffer.hpp  Texture.hpp
VitraeEngine/include/Vitrae/Renderers/OpenGL/Compositing/: ClearRender.hpp  Compute.hpp  DataRender.hpp  SceneRender.hpp
VitraeEngine/include/Vitrae/Renderers/OpenGL/Shading/: Constant.hpp  Function.hpp  Header.hpp
VitraeEngine/include/Vitrae/TypeConversion/: StringConvert.hpp
VitraeEngine/include/Vitrae/Types/: BoundingBox.hpp  UniqueAnyPtr.hpp
VitraeEngine/include/Vitrae/Util/: GpuCompute.hpp  MovableSpan.hpp  PropertyGetter.hpp  PropertyList.hpp  Rasterizing.hpp  ScopedDict.hpp  StableMap.hpp  Variant.hpp
VitraeEngine/include/Vitrae/Visuals/: Compositor.hpp
VitraeEngine/src/: ComponentRoot.cpp
VitraeEngine/src/Assets/: Material.cpp  Model.cpp
VitraeEngine/src/Pipelines/Compositing/: Constant.cpp  FrameToTexture.cpp  Function.cpp
VitraeEngine/src/Renderers/: OpenGL.cpp
VitraeEngine/src/Renderers/OpenGL/: FrameStore.cpp  Mesh.cpp  ShaderCompilation.cpp  SharedBuffer.cpp  Texture.cpp
VitraeEngine/src/Renderers/OpenGL/Compositing/: ClearRender.cpp  Compute.cpp  DataRender.cpp  SceneRender.cpp
VitraeEngine/src/Renderers/OpenGL/Shading/: Constant.cpp  Function.cpp  Header.cpp
VitraeEngine/src/Types/: BoundingBox.cpp
VitraeEngine/src/Util/: ScopedDict.cpp  Variant.cpp
VitraeEngine/src/Visuals/: Compositor.cpp  Scene.cpp
forms/: Profiler.ui  Settings.ui
media/dataPoint/: dataPoint.mtl
src/: ProfilerWindow.cpp  ProfilerWindow.h  SettingsWindow.cpp  SettingsWindow.h  Status.cpp  Status.hpp  assetCollection.cpp  assetCollection.hpp  main.cpp  shadingModes.cpp
src/Methods/: abstract.cpp  classic.hpp  lightSpaceStable.hpp  renderShades.hpp  shadowBiLin.hpp  shadowEBR.hpp  shadowPCF.hpp  shadowRough.hpp
src/Standard/: Params.hpp  Textures.hpp
src/converters/: aiPBSConvert.hpp  aiPhongConvert.hpp
src/generators/: meshNormals.hpp  meshTangents.hpp  modelSilhouette.hpp
src/methods/: displayCamera.hpp  displayNormals.hpp  effectNormalMaps.hpp  (+11 more)
(+22 files in other folders)
